# system_manager_server

./: .gitignore  2  Cargo.toml  README.md  SystemManager.h  build.rs  dev.crt  dev.key  global.css  install.sh  package-lock.json  package.json  settings.json  settings.toml  system_manager_server.h
.cargo/: config.toml
src/: api.rs  auth.rs  handlers.rs  lib.rs  main.rs  router.rs  server.rs  settings.rs  status.rs  templates.rs  update_manager.rs  users.rs
src/handlers/: shell.rs  status.rs  users.rs
src/router/: module.rs  templates.rs
src/server/: request_handler.rs  secure.rs
static/: home.js  shell.html  style.css
templates/: error.html  home.html  index.html  management.html  settings.html  user_settings.html
users/linuxman/: user.json
