[package]
name = "system_manager_server"
version = "0.1.0"
edition = "2024"

[lib]
name = "system_manager_server"
path = "src/lib.rs"
# crate-type = ["cdylib"]

[[bin]]
name = "system_manager_server"
path = "src/main.rs"

[dependencies]
askama = "0.14.0"
axum = { version = "0.8.4", features = ["ws"] }
base64 = "0.22.1"
battery = "0.7.8"
futures-util = "0.3.31"
libc = "0.2.171"
libloading = "0.8.8"
nix = "0.29.0"
once_cell = "1.21.3"
pam = "0.8.0"
rand = "0.9.1"
rustls = "0.23.25"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sysinfo = "0.34.2"
tokio = { version = "1.44.2", features = ["full"] }
tokio-rustls = "0.26.2"
tokio-stream = "0.1.17"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs"] }
tower-sessions = "0.14.0"
users = "0.11.0"
