[package]
name = "system_manager_server"
version = "0.1.0"
edition = "2024"
[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
askama = "0.14.0"
axum = { version = "0.8.4", features = ["ws"] }
base64 = "0.22.1"
battery = "0.7.8"
env_logger = "0.11.8"
log = "0.4.29"
rand = "0.9.2"
rustls = "0.23.25"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sysinfo = "0.37.2"
tokio = { version = "1.44.2", features = ["full"] }
tokio-rustls = "0.26.2"
toml = "0.9.10"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs"] }
tower-sessions = "0.14.0"


